syntax = "proto3";
option go_package = "github.com/oj-lab/user-service/userpb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

enum UserRole {
  USER = 0;
  ADMIN = 1;
}

message User {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
  string email = 5;
  UserRole role = 6;
  optional string github_id = 7;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
  rpc GetCurrentUser(google.protobuf.Empty) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  UserRole role = 3;
  optional string password = 4;
  optional string github_id = 5;
}

message GetUserRequest { uint64 id = 1; }

message ListUsersRequest {
  uint64 page = 1;
  uint64 page_size = 2;
}
message ListUsersResponse {
  repeated User users = 1;
  uint64 total = 2;
}

message UpdateUserRequest {
  uint64 id = 1;
  optional string name = 2;
  optional string email = 3;
  optional UserRole role = 4;
  optional string password = 5;
  optional string github_id = 6;
}

message DeleteUserRequest { uint64 id = 1; }
message DeleteUserResponse { uint64 id = 1; }